[package]
name = "bigbang"
version = "0.1.0"
authors = ["Andy Newton <andy@hxr.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.33.0"

flexi_logger = "^0.13.2"
log = "0.4"

toml = "0.5.1"
serde = { version = "1.0.94", features = ["derive"] }